# C-ASS2

./: C++ Ass2.sln  CODE_EXPLANATION.md
C++ Ass2/: .gitignore  C++ Ass2.cpp  C++ Ass2.vcxproj  C++ Ass2.vcxproj.filters  C++ Ass2.vcxproj.txt  CMakeLists.txt  README.md  main.cpp  run.bat  setup.bat  setup_database.bat
C++ Ass2/C++ Ass2/: CODE_EXPLANATION.md
C++ Ass2/include/: AcademicLevel.h  Attendance.h  College.h  Course.h  Database.h  Department.h  Grade.h  JsonHelper.h  Laboratory.h  LectureHall.h  Professor.h  Registration.h  Schedule.h  Section.h  SessionManager.h  Student.h
C++ Ass2/sql/: add_permissions.sql  sample_data.sql  schema.sql  schema_v2.sql  schema_v3.sql
C++ Ass2/src/: Attendance.cpp  College.cpp  Course.cpp  Database.cpp  Grade.cpp  JsonHelper.cpp  Professor.cpp  Registration.cpp  SessionManager.cpp  Student.cpp
C++ Ass2/web/: attendance.html  colleges.html  courses.html  dashboard.html  fees.html  grades.html  halls.html  index.html  my-grades.html  permissions.html  professors.html  registrations.html  students.html  users.html
C++ Ass2/web/css/: style.css
C++ Ass2/web/js/: app.js  permissions-ui.js
